# Django-Template

./: .dockerignore  .gitignore  .isort.cfg  Makefile  README.md  docker-compose.dev.yml  entrypoint.sh  example.env  manage.py  pyproject.toml  requirements.txt  wait_for_db.sh
.github/workflows/: deploy.yml
apps/common/: models.py  tasks.py  tests.py  views.py
apps/users/: admin.py  models.py  tests.py
apps/users/migrations/: 0001_initial.py
conf/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
conf/settings/: base.py  dev.py  prod.py
deployment/: Dockerfile  docker-compose.yml  send_backup.sh
deployment/server/: Caddyfile  media.Caddyfile  nginx.conf
prometheus/: prometheus.yml
