[project]
name = "django-template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-ckeditor-5>=0.2.19",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.1.0",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "django-jazzmin>=3.0.1",
    "django-prometheus>=2.4.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-standardized-errors>=0.15.0",
    "flake8>=7.3.0",
    "gunicorn>=23.0.0",
    "iniconfig>=2.3.0",
    "jsonschema>=4.26.0",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
]
