[project]
name = "django-template"
version = "1.0.0"
description = "Production-ready Django template: Traefik v3, uv, Celery, Postgres 18"
requires-python = ">=3.13"
dependencies = [
    # Django core
    "django>=5.2,<6.0",
    # REST framework
    "djangorestframework>=3.17",
    "djangorestframework-simplejwt>=5.5",
    "django-filter>=25.2",
    "django-cors-headers>=4.9",
    "drf-spectacular>=0.29",
    "drf-standardized-errors>=0.16",
    # Admin & extensions
    "django-unfold>=0.99",
    "django-ckeditor-5>=0.2.20",
    "django-import-export>=4.4",
    # Database
    "psycopg[binary]>=3.3",
    # Cache & broker
    "django-redis>=7.0",
    "redis>=8.0",
    # Background tasks
    "celery>=5.6",
    "django-celery-beat>=2.9",
    # Observability
    "django-prometheus>=2.5",
    "sentry-sdk[django]>=2.60",
    # Config & static files
    "django-environ>=0.14",
    "whitenoise>=6.12",
    # Server
    "uvicorn[standard]>=0.49",
    # Utilities
    "pillow>=12.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0",
    "pytest>=9.1",
    "pytest-django>=4.12",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "mypy>=2.1",
    "django-stubs>=6.0",
    "pre-commit>=4.6",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "DJ",  # flake8-django
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "conf"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
strict = false

[tool.django-stubs]
django_settings_module = "conf.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.settings.dev"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["apps", "conf"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
